--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     #sidebar {
         background-color: #335030;
         position: absolute;
-        right: 0;
+        right: 1px;
         width: 20%;
         height: 1000px;
     }
@@ -41,6 +41,7 @@
     #main {
         background-color:#466f42;
         height: 1000px;
+
         margin-right: 25%;
         border: 2px;
         margin-left: 25%;
@@ -94,6 +95,9 @@
         cursor: pointer;
         display: inline-block;
     }
+    h1, h2, h3, h4, h5, h6 {
+        font-family: Pompadur, 'Comic Sans MS', cursive;
+    }
 </style>
     </head>
 <body>
@@ -101,6 +105,7 @@
         <div class="layer2">
             Отсровський Максим
         </div>
+        <center><h2>TOYOTA SUPRA</h2></center>
     </div>
     <div id="sidebar">
         <center>
@@ -122,10 +127,23 @@
 
         </center>
     </div>
-    <div id="sidebar1">Правый сайдбар</div>
+    <div id="sidebar1"><h2>Тойота Супра • 1 покоління (A40) • 1978–1981</h2>
+                           <p><h3>Перша Toyota Supra з'явилася у 1978 році. Машина оснащувалась "шісткою" об'ємом від 2,0 до 2,7 літра потужністю 111-118 л. с.. У продажу модель була представлена ​​з п'ятиступінчастою механічною коробкою передач та чотириступінчастим "автоматом". Випуск автомобіля завершився 1981 року.</h3></p>
+         
+         </div>
     <div id="main">
-        <div id="menu">Меню</div>
-        <div id="content">Основное содержимое</div>
+        <div id="menu"><h2>
+    Тойота Супра • 2 покоління (A60) • 1981–1986
+</h2>
+    <p><h3>"Друга" Toyota Supra з індексом A60 з'явилася у продажу в 1982 році. На моделі встановлювали двигуни об'ємом 2,0 та 2,8 літрів потужністю від 126 до 175 л. с. Виробництво «Супри» другого покоління завершилося 1986 року.</h3></p>
+
+</div>
+        <div id="content">
+            <h2>
+                Тойота Супра • 3 покоління (A70) • 1986–1992
+            </h2>
+            <p><h3>Автомобіль Toyota Supra третього покоління випускався з 1986 до 1992 року. Машина також оснащувалась рядними "шістками", але тепер це були нові агрегати об'ємом 2,0, 2,5 і 3,0 літрів, у лінійці двигунів були присутні і атмосферні варіанти, і модифікації з турбонаддувом. Крім того, на місцевому ринку пропонувалася версія з найпотужнішим мотором 2.5, що розвиває 280 л. с.</h3></p>
+        </div>
 
     </div>
     <div id="footer">Футер</div>
